Retouched the css of the google main page

--- a/project_0/googlefront.html
+++ b/project_0/googlefront.html
@@ -13,8 +13,8 @@
 		<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         <form action="https://google.com/search">
             <input id="inputquery" type="text" name="q">
-            <input class="button" type="submit" value="Google Search">
-			<input class="button" type="submit" value="I'm Feeling Lucky">
+            <input class="button" id="left-button" type="submit" value="Google Search">
+			<input class="button" id="right-button" type="submit" value="I'm Feeling Lucky">
         </form>
 		<div>
     </body>
