--- a/project_0/googlefront.html
+++ b/project_0/googlefront.html
@@ -9,12 +9,12 @@
 			<a href="googleimage.html" target="_self">Image Search</a>
 			<a href="googleadvanced.html" target="_self"> Advanced Search </a>
 		</nav>
-		<div>
+		<div class="main">
 		<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         <form action="https://google.com/search">
             <input id="inputquery" type="text" name="q">
-            <input class="button" id="left-button" type="submit" value="Google Search">
-			<input class="button" id="right-button" type="submit" value="I'm Feeling Lucky">
+            <input class="button" id="search-button" type="submit" value="Google Search">
+			<input class="button" id="lucky-button" type="submit" value="I'm Feeling Lucky">
         </form>
 		<div>
     </body>
