--- a/project_0/googleimage.html
+++ b/project_0/googleimage.html
@@ -1,1 +1,24 @@
-  
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Google Images</title>
+		<link rel="stylesheet" href="googlefront.css">
+    </head>
+    <body>
+		<nav>
+			<a href="googlefront.html" target="_self">Google Search</a>
+		</nav>
+		<div class="main">
+			<div id="logo">
+				<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+				<span>images</span>
+		 	</div>
+        <form action="https://www.google.com/search">
+            <input id="inputquery" type="text" name="q">
+			<input type="hidden" value="img" name="client">
+            <input class="button" type="submit" value="Google Search">
+        </form>
+		</div>
+    </body>
+</html> 
+
